# omniclid

./: .gitignore  LICENSE_1.0.txt  README.md  memo
src/HyperComplex/: HyperComplex.h  dual_quaternion_map.h  hypercomplex_map.h  imagine_map.h  quaternion_map.h
src/Matrix/: Matrix.h  Matrix_base.h  Matrix_impl.h  Matrix_impl_detail.h  Matrix_initializer.h  Matrix_meta.h  Matrix_ref.h  Matrix_slice.h
src/Util/: Amount.h  Comperable.h  meta.h  meta_list.h  meta_map.h  meta_utility.h
test/: CMakeLists.txt  Makefile  a.out  cmake_install.cmake
test/HyperComplex/: CMakeLists.txt  a.out  hypercomplex_test.cpp
test/Matrix/: CMakeLists.txt  a.out  matrix_test.cpp
test/compiletest/: a.out  amount.cpp  compilememo  hypercomplex_test.cpp  matrix_test.cpp  namesolutest.cpp  specificinnerclass.cpp  test.cpp  testmeta.cpp
